Fixed alarm audio not playing on mobile

--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -5,12 +5,18 @@ body {
     height: 100%;
     margin: 0px;
     padding: 0px;
-    background: #DE3641;
+   background: #EF6C00;
+}
+
+body.active{
+     background: #DE3641;
 }
 
 body.break{
-    background: #54bb87;
+    background: #2D8F5D;
 }
+
+
 
 .main-content{
     background: transparent;
@@ -21,14 +27,18 @@ body.break{
       color:white;
   }
   .pomodoro-container h1{
-      font-size: 10vw;
+      font-size: 10vmax;
       margin: 0;
       padding: 5px;
       font-weight:lighter;
   }
   
-    .pomodoro-container md-button{
-        padding: 10px 20px;
+    .pomodoro-container button{
+        padding: 1px 20px;
+    }
+    
+    .pomodoro-container button{
+        font-size: 1.2em;
     }
     
     .md-dialog-content {
